# Volume-Control

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
Volume Control/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  Resource.rc  Volume Control.cpp  Volume Control.h  VolumeController.h  VolumeController_Linux.cpp  VolumeController_Windows.cpp  VolumeController_macOS.cpp
docs/json/: volume-linux_x64_sha256.json  volume-macos_x64_sha256.json  volume-windows_x64_sha256.json
docs/md/: pre-release.md  release.md
docs/md/reference/: changelog.md
